# dgmrcp

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  Vagrantfile  build.rs
.github/workflows/: build.yml
native/: dgmrcp.h
provisioning/: playbook.yml
provisioning/roles/core/tasks/: main.yml  starship.yml  tools.yml
provisioning/roles/unimrcp/defaults/: main.yml
provisioning/roles/unimrcp/tasks/: main.yml
src/: channel.rs  codec.rs  config.rs  deepgram.rs  engine.rs  error.rs  frame.rs  helper.rs  lib.rs  logging.rs  message.rs  pool.rs  request.rs  stem.rs  stream.rs  vendor_params.rs
src/utils/: cell.rs
