[package]
name = "dgmrcp"
version = "0.1.0"
authors = ["Adam Sypniewski <ajsyp@syptech.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# Dependencies for building the C library.
[build-dependencies]
bindgen = "0.50.0"

[dependencies]
base64 = "0.12"
log = "0.4"
reqwest = { version = "0.10", features = ["cookies", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["rt-core"] }
http = "0.2"
tokio-tungstenite = "0.10"
tungstenite = "0.10"
futures = "0.3"
url = { version = "2.1", features = ["serde"] }

backtrace = "0.3"
