[package]
name = "dgmrcp"
version = "0.2.2"
authors = [
  "Adam Sypniewski <ajsyp@syptech.net>",
  "Anthony Deschamps <anthony.j.deschamps@gmail.com>",
]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# Dependencies for building the C library.
[build-dependencies]
bindgen = { version = "0.50.0", default-features = false }

[dependencies]
async-tungstenite = { version = "0.10", features = ["tokio-rustls"] }
base64 = "0.13"
bytes = "0.6"
futures = "0.3"
http = "0.2"
itertools = "0.9"
log = "0.4"
# reqwest = { version = "0.10", default-features = false, features = ["cookies", "json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.8", features = ["rt", "rt-multi-thread", "sync"] }
url = { version = "2.1", features = ["serde"] }
xml-rs = "0.8"
